Fix event list alignment.

--- a/web/app/src/main/content/jcr_root/etc/designs/girlscouts-usa-green/static.css
+++ b/web/app/src/main/content/jcr_root/etc/designs/girlscouts-usa-green/static.css
@@ -52,6 +52,9 @@ h1, h2, h3, h4, h5, h6 {
 .error {
     color: red;
 }
+.bold {
+	font-weight: bold;
+}
 a {
     color: #00ae58;
 }
@@ -1156,10 +1159,48 @@ form#contact-us textarea {
 	margin-left: auto !important;
 	margin-right: auto !important;
 }
-#searchBox {
-	text-align: center;
 
 .event-page .lineHeight{
 	line-height:1.5em;
 	font-size:1rem;
+}
+
+
+/* events search list */
+.events-list .content {
+        margin: 20px 38px 20px 30px;
+}
+.events-list p {
+    line-height:100%;
+        margin-bottom: 0.2rem;
+}
+.events-lists{
+        margin-bottom:40px;
+}
+.events-lists .event-title h6{
+	margin-bottom: -0.1em;
+}
+
+.eventsList {
+	clear: both;
+}
+.eventsList p, .eventsList b {
+	line-height: 1em;
+}
+.eventsList h6 {
+	line-height: 0.9em;
+}
+.eventsList.eventSection .leftCol{
+	margin-bottom: 2em;
+}
+.eventsList .leftCol {
+       float: left;
+       background: #ffffff;
+       width: 140px;
+}
+.eventsList .rightCol {
+       width: 100%;
+}
+.horizontalRule {
+       background: url('images/horizontal-stripe.png') repeat-x center center;
 }
